# cuMultiply

./: .gitignore  CMakeLists.txt  README.md  cpu_baseline.py  eval_utils.py  kernel_eval.py  main.py  pyproject.toml
kernels/: crt_multiply.cu  device_helpers.h  device_helpers_test.cu  example_kernel.cu  example_multiply.cu  helpers.h  host_helpers.h  incorrect_multiply.cu  kernel_interface.h  naive.py  naive_multiply.cu
scripts/: generate_test_cases.py
tests/: benchmark.py  utils.py  validate.py
tests/helpers/: test_device_helpers.py
tests/multiply/: benchmark.py  utils.py  validate.py
